--- a/Includes/Bibliography/all.bib
+++ b/Includes/Bibliography/all.bib
@@ -2026,6 +2026,16 @@
   year={2019},
   publisher={Elsevier}
 }
+
+@article{frenklach2019new,
+  title={New form for reduced modeling of soot oxidation: Accounting for multi-site kinetics and surface reactivity},
+  author={Frenklach, Michael},
+  journal={Combustion and Flame},
+  volume={201},
+  pages={148--159},
+  year={2019},
+  publisher={Elsevier}
+}
 @article{2020SciPy,
   author  = {Virtanen, Pauli and Gommers, Ralf and Oliphant, Travis E. and
             Haberland, Matt and Reddy, Tyler and Cournapeau, David and
