--- a/Includes/settings.tex
+++ b/Includes/settings.tex
@@ -1,6 +1,8 @@
 \usepackage{a4}
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx,caption,subcaption}
+\captionsetup[table]{font={stretch=1}}     %% change 1.2 as you like
+\captionsetup[figure]{font={stretch=1}} 
 \usepackage{verbatim}
 \usepackage[total={6in, 9in}, top=1in,left=1.1in]{geometry} 
 \usepackage{moreverb}
