--- a/Includes/validation.tex
+++ b/Includes/validation.tex
@@ -28,7 +28,7 @@ a cubic cell with the constant temperature of 298 K and pressure of 1 atm~\citep
 
 
 \subsection{Coagulation}
-This test case was designed and conducted to validate the coagulation sub-unit of both particle dynamics models, MPBM and SPBM, by comparing the results of omnisoot with those of DEM~\citep{kholghy2021surface}. The constant volume reactor was used for this test case, but it will be applicable to other reactors and flame models as long as the particle residence time matches with the values obtained by DEM. An adiabatic reactor with the volume of 1 $\mathrm{m^3}$ is initialized with $2.6261\times10^{18}$ spherical particles 2 nm in diameter. The initial conditions are indicated in Table~\ref{tab:simcond_coagtest}. The particles are allowed to coagulate in the free molecular regime and grow in size while no inception, PAH adsorption and surface growth occur. Figure~\ref{fig:coagvalid_Nd} demonstrates the number density of agglomerates (${N_{agg}}$) and primary particles (${N_{pri}}$), and mobility (${d_m}$) and gyration (${d_m}$) diameters of particle obtained by omnisoot that are in good agreement with DEM results. ${N_{pri}}$ is conserved during coagulation resulting in identical flat lines for both particle dynamics models, but ${N_{agg}}$ declines over time with the higher decay rate for SPBM because it accounts for the polydispersity of agglomerates that results in larger collision frequency compared to MPBM. Therefore, mean mobility and gyration diameter  of SPBM (red lines in Fig.~\ref{fig:coagvalid_Nd}-b) are slightly larger than those of MPBM (blue line of the same figure).
+This test case was designed and conducted to validate the coagulation sub model of both particle dynamics models, MPBM and SPBM, by comparing the results of omnisoot with those of DEM~\citep{kholghy2021surface}. The constant volume reactor was used for this test case, but it will be applicable to other reactors and flame models as long as the particle residence time matches with the values obtained by DEM. An adiabatic reactor with the volume of 1 $\mathrm{m^3}$ is initialized with $2.6261\times10^{18}$ spherical particles 2 nm in diameter. The initial conditions are indicated in Table~\ref{tab:simcond_coagtest}. The particles are allowed to coagulate in the free molecular regime and grow in size while no inception, PAH adsorption and surface growth occur. Figure~\ref{fig:coagvalid_Nd} demonstrates the number density of agglomerates (${N_{agg}}$) and primary particles (${N_{pri}}$), and mobility (${d_m}$) and gyration (${d_m}$) diameters of particle obtained by omnisoot that are in good agreement with DEM results. ${N_{pri}}$ is conserved during coagulation resulting in identical flat lines for both particle dynamics models, but ${N_{agg}}$ declines over time with the higher decay rate for SPBM because it accounts for the polydispersity of agglomerates that results in larger collision frequency compared to MPBM. Therefore, mean mobility and gyration diameter  of SPBM (red lines in Fig.~\ref{fig:coagvalid_Nd}-b) are slightly larger than those of MPBM (blue line of the same figure).
 
 \begin{figure}[H]
 	\centering
@@ -37,7 +37,7 @@ This test case was designed and conducted to validate the coagulation sub-unit o
 	\label{fig:coagscheme}
 \end{figure}
 
-MPBM model cannot resolve PSD because of the monodispersity assumption. In contrast, SPBM tracks the number concentration of particles in separate sections that can be used to construct evolving PSD and calculate mean properties and determine the spread of size distribution of particles during coagulation. Figure~\ref{fig:coagvalid_sigmapsd}-a shows the standard deviation of mobility diameter, ${\sigma_g}$ predicted by SPBM in close agreement with DEM results. ${\sigma_g}$ starts from unity indicating a monodisperse population at the beginning of simulation, and it finally reaches 2.03 that is the signature standard deviation of the free molecular regime~\citep{vemury1995self}. Fig.~\ref{fig:coagvalid_sigmapsd} demonstrates the evolution of non-dimensional PSD from t=1 ms to 677 ms. The PSD is plotted for the normalized concentration, $\mathrm{\Psi= \bar{v}n_{agg}(v,t)/N_{agg,\inf}}$ and dimensionless volume, ${\eta= v/ \bar{v}}$, where ${n_{agg}(v,t)}$ is the size distribution function of agglomerate, ${v}$ particle volume, $\mathrm{\bar{v}}$ mean particle volume, ${N_{agg,\inf}}$ total number concentration of agglomerates. For short residence times, t$\approx$4 ms, the PSD resembles a half bell curve because the majority of particles has sizes close to $\mathrm{d_0=2 nm}$ with the average volume close to the minimum volume, so the particles with $\mathrm{\eta\approx1}$ has the largest concentration. As particles grow by coagulation, the PSD rapidly transitions to a full bell-curve ($\mathrm{t\ge22 ms}$) and does not change for longer residence times, $\mathrm{t\ge447 ms}$ marking the attainment of SPSD in a good agreement with DEM results. This confirms the capability of SPBM implemented in omnisoot to capture SPSD for soot agglomerates as a signature of Brownian-driven particle coagulation.  
+MPBM model cannot resolve PSD because of the monodispersity assumption. In contrast, SPBM tracks the number concentration of particles in separate sections that can be used to construct evolving PSD and calculate mean properties and determine the spread of size distribution of particles during coagulation. Figure~\ref{fig:coagvalid_sigmapsd}-a shows the standard deviation of mobility diameter, ${\sigma_g}$ predicted by SPBM in close agreement with DEM results. ${\sigma_g}$ starts from unity indicating a monodisperse population at the beginning of simulation, and it finally reaches 2.03 that is the signature standard deviation of the free molecular regime~\citep{vemury1995self}. Fig.~\ref{fig:coagvalid_sigmapsd} demonstrates the evolution of non-dimensional PSD from t=1 ms to 677 ms. The PSD is plotted for the normalized concentration, ${\Psi= \bar{v}n_{agg}(v,t)/N_{agg,\infty}}$ and dimensionless volume, ${\eta= v/ \bar{v}}$, where ${n_{agg}(v,t)}$ is the size distribution function of agglomerate, ${v}$ particle volume, ${\bar{v}}$ mean particle volume, ${N_{agg,\infty}}$ total number concentration of agglomerates. For short residence times, t$\approx$4 ms, the PSD resembles a half bell curve because the majority of particles has sizes close to ${d_0=2} nm$ with the average volume close to the minimum volume, so the particles with ${\eta\approx1}$ has the largest concentration. As particles grow by coagulation, the PSD rapidly transitions to a full bell-curve ($\mathrm{t\ge22 ms}$) and does not change for longer residence times, $\mathrm{t\ge447 ms}$ marking the attainment of SPSD in a good agreement with DEM results. This confirms the capability of SPBM implemented in omnisoot to capture SPSD for soot agglomerates as a signature of Brownian-driven particle coagulation.  
 
 \begin{table}
 	\caption{The simulations conditions of the coagulation test case~\citep{kholghy2021surface}}
@@ -129,7 +129,7 @@ MPBM model cannot resolve PSD because of the monodispersity assumption. In contr
 
 \subsection{Constant Volume Reactor}
 The pyrolysis of 30\% $\mathrm{CH_4}$ diluted in $\mathrm{N_2}$ with the initial temperature and pressure of 2455 K and 3.47 atm, respectively, was simulated using the constant volume reactor model in the residence time of 40 ms. The combination of available PAH growth and particle dynamics models leads to eight different cases that were simulated to ensure the conservation of mass and energy. Here, we focus on the total elemental balance of carbon and hydrogen because they are involved in soot processes. %The validity of models are evaluated based on relative error based on the initial mass and energy of gas. 
-Figure~\ref{fig:constuvvalid} demonstrates the relative error of total carbon, hydrogen and energy of system for different PAH growth and particle dynamics models in the constant volume that falls below $\mathrm{10^{-10}}$ for all parameters confirming the validity of model in satisfying the mass and energy balance in the constant volume reactor using all models. 
+Figure~\ref{fig:constuvvalid} demonstrates the relative error of total carbon, hydrogen and energy of system for different PAH growth and particle dynamics models in the constant pressure reactor that is less than $\mathrm{10^{-10}}$ for all parameters confirming the validity of model in satisfying the mass and energy balance.
 
 \begin{figure}[H]
 	\centering
@@ -169,6 +169,6 @@ The mass and energy balance are investigated for soot formation during ethylene-
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.8\textwidth]{Figures/Results/Validation/PSR/relerr_psr.pdf}
-	\caption{The relative error (residual) of total carbon (red line) and hydrogen (green line) mass, and total internal energy residual of gas and soot (blue line) plotted in simulation time during adiabatic combustion of $\mathrm{C_2H_4}$-air with $\phi=2$ 1 atm simulated using different PAH growth models and MPBM (solid line) and SPBM (dashed line)}
+	\caption{The relative error (residual) of total carbon (red line) and hydrogen (green line) mass, and total internal energy residual of gas and soot (blue line) plotted in simulation time during adiabatic combustion of $\mathrm{C_2H_4}$-air with $\phi=2$ at 1 atm simulated using different PAH growth models and MPBM (solid line) and SPBM (dashed line)}
 	\label{fig:psrvalid}
 \end{figure}
