--- a/Includes/Bibliography/_ref_2019.bib
+++ b/Includes/Bibliography/_ref_2019.bib
@@ -117,3 +117,13 @@
   year={2019},
   publisher={Elsevier}
 }
+
+@article{frenklach2019new,
+  title={New form for reduced modeling of soot oxidation: Accounting for multi-site kinetics and surface reactivity},
+  author={Frenklach, Michael},
+  journal={Combustion and Flame},
+  volume={201},
+  pages={148--159},
+  year={2019},
+  publisher={Elsevier}
+}
