--- a/Includes/title.tex
+++ b/Includes/title.tex
@@ -10,3 +10,9 @@
 	\date{}
 	\maketitle
 	\renewcommand\baselinestretch{1.3}
+	
+	\begin{abstract}
+	A computational tool, \textit{omnisoot} was developed to describe formation of carbonaceous nanoparticles from reaction of hydrocarbons. This tool includes four reactors models that allow utilizing all various reaction mechanisms for description of gas chemistry with two different aerosol dynamics model and four inception and surface growth models from the literature, which makes it a robust tool analyzing particle yield and morphology in famous experimental targets such as shock-tubes, and flow and well-stirred reactors. The integrated architecture of omnisoot enables a comprehensive comparison of different modeling approaches by providing a unified platform for evaluating the effects of reaction kinetics, aerosol dynamics, and surface growth mechanisms on soot formation. The tool facilitates detailed sensitivity analyses, benchmarking against experimental data, and the exploration of parameter spaces to improve predictive capabilities for carbonaceous particle formation in combustion environments.
+		
+	\end{abstract}
+	
